# Tally

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  STRUCTURE.md  phases.md  prd.md  stack.md
app/core/: Cargo.toml
app/core/benches/: large_journal.rs
app/core/src/: error.rs  journal.rs  lib.rs  model.rs  parser.rs  printer.rs  query.rs  report.rs
app/core/tests/: proptest_invariants.rs  reports_snapshot.rs  sample_journal.rs
app/core/tests/snapshots/: reports_snapshot__balance_assets.snap  reports_snapshot__balance_sample.snap  reports_snapshot__register_sample.snap
app/examples/: sample.journal  tally.toml
app/tally/: Cargo.toml
app/tally/src/: config.rs  main.rs
app/tally/src/tui/: form.rs  mod.rs  theme.rs  ui.rs
web/: README.md
web/app/: README.md
web/docs/: astro.config.mjs  package.json  pnpm-lock.yaml
web/docs/public/: robots.txt  site.webmanifest
web/docs/src/content/docs/: commands.md  config.md  format.md  index.mdx  install.md  keybindings.md
