[package]
name = "tally-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pure domain logic for Tally — no TUI dependencies"
keywords = ["accounting", "ledger", "finance", "plain-text"]
categories = ["finance", "parser-implementations"]

[dependencies]
rust_decimal = "1"
rust_decimal_macros = "1"
jiff = "0.2"
indexmap = "2"
thiserror = "2"
winnow = "1.0.3"
miette = { version = "7.6.0", features = ["fancy"] }

[dev-dependencies]
insta = "1"
rust_decimal_macros = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "large_journal"
harness = false

[lints]
workspace = true
