[package]
name = "tally"
version = "0.1.0"
edition = "2024"
description = "Tally — plain-text, double-entry accounting for the terminal"

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
tally-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
color-eyre = "0.6"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.29"
rust_decimal = "1"
nucleo-matcher = "0.3"
jiff = "0.2"

[dev-dependencies]
insta = "1"

[lints]
workspace = true
