[package]
name = "tally"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tally — plain-text, double-entry accounting for the terminal"
keywords = ["accounting", "ledger", "tui", "finance", "cli"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
tally-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
color-eyre = "0.6"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.29"
rust_decimal = "1"
nucleo-matcher = "0.3"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

[dev-dependencies]
insta = "1"

[lints]
workspace = true
